--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,42 +16,55 @@
 
     <!-- 외부스크립트연결 -->
     <script src="js/js.js"></script>
+
+    <!-- 폰트어썸연결 -->
+    <script src="https://kit.fontawesome.com/8ee2447cc0.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    
+
     <header>
-        <h1>로고</h1>
-        <nav>
-            <ul>
-                <il><a href=""></a></il>
-                <il><a href=""></a></il>
-                <il><a href=""></a></il>
-                <il><a href=""></a></il>
-                <il><a href=""></a></il>
-                <il><a href=""></a></il>
-                <il><a href=""></a></il>
-            </ul>
-        </nav>
-        <div class="util">
-            <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
+        <div class="header_inner">
+            <h1>
+                <a href=""><img src="img/logo.png" alt=""></a>
+            </h1>
+            <nav>
+                <ul>
+                    <il><a href="">COFFEE</a></il>
+                    <il><a href="">MENU</a></il>
+                    <il><a href="">STORE</a></il>
+                    <il><a href="">RESPONSIBILITY</a></il>
+                    <il><a href="">STARBUCK REWARDS</a></il>
+                    <il><a href="">CORPORATE</a></il>
+                    <il><a href="">WHAT'S NEW</a></il>
+                </ul>
+            </nav>
+            <div class="util">
+                <ul>
+                    <li><a href="">Sign In</a></li>
+                    <li><a href="">My Starbucks</a></li>
+                    <li><a href="">Costomer Service&Idea</a></li>
+                    <li><a href="">Find a Store</a></li>
+                    <li><a href="">
+                            <form action="">
+                                <div><input type="search" placeholder="통합검색"><i class="fa-solid fa-magnifying-glass"></i></div>
+                            </form>
+                        </a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <div class="wrap">
         <section>
             <div class="hero">
-                <img src="" alt="">
+                <img src="img/2024_5_say_thanks_top_logo.png" alt="">
                 <span><a href="">자세히보기</a></span>
             </div>
             <div class="mainimg">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img/2024_5_say_thanks_top_drink2.png" alt="">
+                <img src="img/2024_5_say_thanks_top_drink1.png" alt="">
+                <img src="img/2024_5_say_thanks_top_drink3.png" alt="">
             </div>
         </section>
         <section>
@@ -159,4 +173,5 @@
     </div>
 
 </body>
+
 </html>
