--- a/nike/index.html
+++ b/nike/index.html
@@ -16,7 +16,39 @@
     </div>
     <h1><img src="img/logo2.png" alt="nike로고"></h1>
     <header>
-
+        <ul class="gnb">
+            <li class="on"><a href=""><em>About NIKE</em></a>
+                <ul>
+                    <li><a href=><em>"English"</em>></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>Brand Info</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>Community</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>Product Value</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>Company History</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+        </ul>
     </header>
 
     <section class="side">
