--- a/nike/index_001.html
+++ b/nike/index_001.html
@@ -10,12 +10,46 @@
 </head>
 <body>
     <div class="vid">
-        <video>
+        <video autoplay muted loop>
             <source src="img/nike.mp4" type="video/mp4">
         </video>
     </div>
     <h1><img src="img/logo2.png" alt="nike로고"></h1>
     <header>
+        <ul>
+            <li><a href=""><em>about nike</em></a>
+                <ul>
+                    <li><a href=""><em>english</em></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>brand info</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>community</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+            <li><a href=""><em>product value</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+
+            </li>
+            <li><a href=""><em>company history</em></a>
+                <ul>
+                    <li><a href=""><em>sub</em></a></li>
+                </ul>
+            </li>
+        </ul>
 
     </header>
     <section>
