--- a/website/index.html
+++ b/website/index.html
@@ -15,18 +15,19 @@
 <body>
 
     <header>
-        <h1>로고
-            <img src="" alt="">
-        </h1> 
-        <nav>메뉴</nav>
-        <div class="util">
-            <ul>
-                <li><a href="">기관소개</a></li>
-                <li><a href="">입양안내</a></li>
-                <li><a href="">후원안내</a></li>
-                <li><a href="">안내센터 </a></li>
-                <li><a href="">커뮤니티 </a></li>
-            </ul>
+        <div class="header_inner" >
+            <h1>
+                <a href=""><img src="img/KAPS logo.png" alt=""></a>
+            </h1> 
+            <nav>
+                <ul>
+                    <li><a href="">기관소개</a></li>
+                    <li><a href="">입양안내</a></li>
+                    <li><a href="">후원안내</a></li>
+                    <li><a href="">안내센터 </a></li>
+                    <li><a href="">커뮤니티 </a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
